@@ -4,22 +4,24 @@ Acknowledgements:
     * Thomas Erskine -- the author of TMS (the predecessor of TMDA).
 
     * Guido van Rossum -- for creating Python, my language of choice.
-    Python allowed me to develop a working version of this software in
-    just a couple of weeks.  This could have easily been a multi-month
-    project in C/C++, or a shorter project in Perl, with working but
-    ugly and unmaintainable results.
+      Python allowed me to develop a working version of this software
+      in just a couple of weeks.  This could have easily been a
+      multi-month project in C/C++, or a shorter project in Perl, with
+      working but ugly and unmaintainable results.
     
     * Andrew Archibald -- provided lots of cryptography-related help and
-    insight.  Much of the crypto design in TMDA stems from his input.
+      insight.  Much of the crypto design in TMDA stems from his input.
 
 Contributions:
 --------------
 
-    * Ron Bickers -- for contributing countless suggestions, bugfixes,
-    documentation additions, and code patches.
+    * Binesh Bannerjee - SACRED_FILE feature.
+    
+    * Ron Bickers -- countless suggestions, bugfixes, documentation
+      additions, and code patches (too many to list).
 
-    * Reuben Sumner -- for contributing the HMAC.py module and for
-    suggesting the "blacklist" functionality.
+    * Ted Rathkopf -- support for "pre-extension" definitions in
+      /var/qmail/users/assign (now depreciated).
 
-    * Ted Rathkopf -- for contributing support for "pre-extension"
-    definitions in /var/qmail/users/assign.
+    * Reuben Sumner -- the HMAC.py module and for suggesting the
+      "blacklist" functionality.
